--- a/37/VSL/index.html
+++ b/37/VSL/index.html
@@ -14,14 +14,14 @@
 <!-- CSS Bootstrap !-->
 
 <!-- Turbo !-->
-<link rel="preload" href="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/653da7c467a28d0008193962/player.js" as="script">
+<link rel="preload" href="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6541d4fe1718ed000986b29a/player.js" as="script">
 <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-<link rel="preload" href="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/653da7c467a28d0008193962/thumbnail.jpg" as="image">
-<link rel="preload" href="https://cdn.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/64d6b2b07b941e0009cae890/main.m3u8" as="fetch">
+<link rel="preload" href="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6541d4fe1718ed000986b29a/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/6541d3bf1718ed000986b298/main.m3u8" as="fetch">
 <link rel="dns-prefetch" href="https://cdn.converteai.net">
 <link rel="dns-prefetch" href="https://scripts.converteai.net">
 <link rel="dns-prefetch" href="https://images.converteai.net">
-<link rel="dns-prefetch" href="https://api.vturb.com.br">>
+<link rel="dns-prefetch" href="https://api.vturb.com.br">
 <!-- Turbo !-->
 	
 <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool'></script>	
@@ -194,7 +194,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<div class="video-vsl">
 					
 					<!-- Scrip do vídeo aqui !-->
-					<div id="vid_653da7c467a28d0008193962" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_653da7c467a28d0008193962" src="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/653da7c467a28d0008193962/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_653da7c467a28d0008193962" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_653da7c467a28d0008193962">var s=document.createElement("script");s.src="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/653da7c467a28d0008193962/player.js",s.async=!0,document.head.appendChild(s);</script>				</div>
+					<div id="vid_6541d4fe1718ed000986b29a" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_6541d4fe1718ed000986b29a" src="https://images.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6541d4fe1718ed000986b29a/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6541d4fe1718ed000986b29a" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6541d4fe1718ed000986b29a">var s=document.createElement("script");s.src="https://scripts.converteai.net/bf52517c-e7cd-47ae-97f0-de3f4f9f984d/players/6541d4fe1718ed000986b29a/player.js",s.async=!0,document.head.appendChild(s);</script>				</div>
 				
 				<h3>
 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-volume-up-fill" viewBox="0 0 16 16">
@@ -236,7 +236,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						document.addEventListener("DOMContentLoaded", function() {
 
 						/* Altere o valor de em SECONDS_TO_DISPLAY = 00 para o tempo em segundo que a ação irá acontecer */
-						var SECONDS_TO_DISPLAY = 870;
+						var SECONDS_TO_DISPLAY = 944;
 						var CLASS_TO_DISPLAY = ".esconder";
 
 						/* Comando de conexão do player do vturb */
