--- a/52/VSL/index.html
+++ b/52/VSL/index.html
@@ -95,7 +95,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	hasChanged: function() {
 	if (b.location.hash == "#no-back") {
 	b.location.hash = "#";
-	b.location.href = " https://trabajodesdecasa.site/52/Descuento "; //LINK PARA REDIRECIONAR AQUI
+	b.location.href = " https://ingresosdelossuenos.site/backredirect/ "; //LINK PARA REDIRECIONAR AQUI
 	}
 	},
 	checkCompat: function() {
@@ -115,7 +115,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	history.pushState(null, "", "#");
 	} else {
 	b.location.hash = "#";
-	b.location.href = " https://trabajodesdecasa.site/52/Descuento "; //LINK PARA REDIRECIONAR AQUI
+	b.location.href = " https://ingresosdelossuenos.site/backredirect/ "; //LINK PARA REDIRECIONAR AQUI
 	}
 	}
 	a.checkCompat();
@@ -295,7 +295,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<table class="fb-comments-comment">
 						<tbody>
 							<tr>
-								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eHOW.9.webp" alt="Foto Usuário"></td>
+								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ayn3p-cwrep.jpg" alt="Foto Usuário"></td>
 								<td><font class="fb-comments-comment-name"><name>Magda Arantes</name> </font></td>
 							</tr>
 							<tr>
@@ -312,7 +312,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<table class="fb-comments-comment">
 							<tbody>
 								<tr>
-									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eNTK.4.webp" alt="Foto Usuário"></td>
+									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ajnoy-uxw9o.jpg" alt="Foto Usuário"></td>
 									<td><font class="fb-comments-comment-name"><name>Yolanda Garcia</name> </font></td>
 								</tr>
 								<tr>
@@ -331,7 +331,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<table class="fb-comments-comment">
 						<tbody>
 							<tr>
-								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eGBx.7.webp" alt="Foto Usuário"></td>
+								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/abr4q-ublf9.jpg" alt="Foto Usuário"></td>
 								<td><font class="fb-comments-comment-name"><name>Juan Soares</name> </font></td>
 							</tr>
 							<tr>
@@ -348,7 +348,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<table class="fb-comments-comment">
 							<tbody>
 								<tr>
-									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m1eNTK.4.webp" alt="Foto Usuário"></td>
+									<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ajnoy-uxw9o.jpg" alt="Foto Usuário"></td>
 									<td><font class="fb-comments-comment-name"><name>Yolanda Garcia</name> </font></td>
 								</tr>
 								<tr>
@@ -367,7 +367,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<table class="fb-comments-comment">
 						<tbody>
 							<tr>
-								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://i.im.ge/2023/08/19/m2M1b9.3.webp" alt="Foto Usuário"></td>
+								<td class="fb-comments-comment-img" rowspan="3"><img width="48" height="48" src="https://s4.aconvert.com/convert/p3r68-cdx67/ax0p3-bymtu.jpg" alt="Foto Usuário"></td>
 								<td><font class="fb-comments-comment-name"><name>Nelia Orozco</name> </font></td>
 							</tr>
 							<tr>
